@@ -2,6 +2,7 @@ ags (3.0.8)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* added GObject-Introspection annotations for GList type properties
+	* improved online help browser to respect --docdir configure parameter
 	* fixes to WASAPI backend
 	* fixes to CoreAudio backend
 
